--- a/frontend/modules/quiz/assets/css/quiz-console.less
+++ b/frontend/modules/quiz/assets/css/quiz-console.less
@@ -1,3 +1,7 @@
+#update-container{
+  padding:0 40px;
+
+}
 .quest-wrapper{
   margin: 5px;
   padding: 5px;
@@ -12,6 +16,7 @@
 	  height: 300px;
 	  .quest-image-object{
 		max-height: 100%;
+		max-width: 100%;
 	  }
 	}
 	.quest-inputs{
@@ -27,62 +32,76 @@
 	  }
 
 	}
+	.answer-help{
+	  font-size: .8em;
+	  span{
+		color: #0000aa;
+	  }
+	}
   	.answer-section{
-	  	.answer-wrapper{
+		font-size: .8em;
+	  	.answer-correct{
+			box-shadow: 0 0 5px red;
+		}
+	  	.answer-wrapper {
 		  padding: 2px;
-		  margin: 5px;
+		  margin: 2px;
 		  float: left;
-		  width: 45%;
-		  position: relative;
-		  font-size: .8em;
 		  .answer-tools{
-			position: absolute;
-			right:0;
-			background-color: wheat;
+			//position: absolute;
+			//right:0;
+			//background-color: wheat;
 		  }
-		  textarea{
-			width: 100%;
-			border: 2px dashed silver;
+		  .answer-inputs {
+			width: 100px;
+			height: 100px;
+			position: relative;
+			textarea {
+			  width: 100%;
+			  height: 100%;
+			  border: 2px dashed silver;
+			}
+			textarea:focus {
+			  color: #0000aa;
+			  border-style: solid;
+			  border-color: grey;
+			  box-shadow: 0 0 2em gray;
+			}
+			img.answer-image-object {
+			  max-width: 100%;
+			  max-height: 100%;
+			}
 		  }
-		  textarea:focus{
-			color: #0000aa;
-			border-style: solid;
-			border-color: grey;
-			box-shadow: 0 0 2em gray;
-		  }
-
 		}
 	}
 }
+
 #add-media-dialog{
   progress{
 	width: 100%;
   }
   .upload-buttons-wrapper{
-	div{
-	  padding: 10px;
-	  text-align: center;
-	  background-color: silver;
-	  height: 100px;
-	  span{
-		font-size: 5em;
-		cursor: pointer;
-		color: #1b6d85;
-	  }
-	}
+	text-align: center;
+	background-color: silver;
+	padding: 10px;
   }
 }
 
-.spacer{
-  clear: both;
+#quest-right{
+  background-color: silver;
+  .option-block {
+	h3{margin: 0 0 5px;}
+	margin: 2px 0;
+	padding: 5px;
+	border-bottom: 5px solid whitesmoke;
+	img.quiz-cover-image {
+	  max-width: 200px;
+	  cursor: pointer;
+	}
+	.options-quest-wrapper{
+	  cursor: pointer;
+	  margin: 1px;
+	  padding: 1px;
+	}
+  }
 }
-.bg-color-1{background-color: blue}
-.bg-color-2{background-color: blueviolet}
-.bg-color-3{background-color: brown}
-.bg-color-4{background-color: burlywood}
-.bg-color-5{background-color: cadetblue}
-.bg-color-6{background-color: chartreuse}
-.bg-color-7{background-color: chocolate}
-.bg-color-8{background-color: coral}
-.bg-color-9{background-color: cornflowerblue}
-.bg-color-0{background-color: darkgoldenrod}
