--- a/frontend/assets/css/custom.less
+++ b/frontend/assets/css/custom.less
@@ -29,8 +29,8 @@
 }
 
 #ajax-loading-image{
-	opacity: .8;
-  background-color: black;
+	//opacity: .8;
+  //background-color: black;
   z-index: 1003;
   position: fixed;
   width: 100%;
