--- a/frontend/modules/cows/assets/css/cows.css
+++ b/frontend/modules/cows/assets/css/cows.css
@@ -7,9 +7,10 @@ table tr.counting {
 }
 
 table tr.counting td:first-child::before {
-	content: counter(rowNumber);
+	content: counter(rowNumber) ". ";
 	min-width: 1em;
 	margin-right: 0.5em;
 }
 
 #clickDigits td{ cursor: pointer; width:40px; margin: 3px; }
+
